kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  namespace: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: homework-pod
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: homework-pod
    spec:
      containers:
        - name: homework-container
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: homework-volume
              mountPath: /usr/share/nginx/html
              readOnly: true
      volumes:
        - name: homework-volume
          emptyDir: {}
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      restartPolicy: Always
